--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.1.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "swr": "^1.3.0",
+    "universal-cookie": "^4.0.4"
   }
 }
