--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@next/font": "^13.0.4",
     "@reduxjs/toolkit": "^1.9.0",
     "next": "13.0.3",
     "react": "18.2.0",
