--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.14",
     "@next/font": "^13.0.4",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
