--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
+    "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.14",
     "@next/font": "^13.0.4",
     "@reduxjs/toolkit": "^1.9.0",
