--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,9 @@
     "@next/font": "^13.0.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@tinymce/tinymce-react": "^4.2.0",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "swr": "^1.3.0",
